# NeuraProp-AI

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: .env.local.example  Dockerfile  next.config.ts  package.json
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: globals.css  layout.tsx
apps/dashboard/src/app/(auth)/login/: page.tsx
apps/dashboard/src/app/(auth)/register/: page.tsx
apps/dashboard/src/app/(dashboard)/: layout.tsx
apps/dashboard/src/app/(dashboard)/analytics/: page.tsx
apps/dashboard/src/app/(dashboard)/conversations/: page.tsx
apps/dashboard/src/app/(dashboard)/escalations/: page.tsx
apps/dashboard/src/components/dashboard/: sidebar.tsx
apps/dashboard/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  select.tsx  separator.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
infra/docker/: docker-compose.yml  init-db.sql  init-localstack.sh
infra/nginx/: nginx.conf
libs/core/: pyproject.toml
libs/core/src/neuraprop_core/: __init__.py  auth.py  config.py  database.py  encryption.py  errors.py  logging.py  redis.py  s3.py  sanitize.py  sqs.py  webhooks.py
libs/core/src/neuraprop_core/models/: __init__.py  audit.py  conversation.py  firm.py  knowledge.py  ticket.py  trader.py
libs/testing/: pyproject.toml
libs/testing/src/neuraprop_testing/: __init__.py  factories.py
migrations/: alembic.ini  env.py
migrations/versions/: 20260406_0001_initial_schema.py
scripts/: seed-data.sh  setup-dev.sh
services/agents/: Dockerfile  pyproject.toml
services/agents/src/agents/: __init__.py  consumer.py
services/agents/src/agents/llm/: __init__.py  agent_caller.py  router.py
services/agents/src/agents/memory/: __init__.py  conversation.py  summarizer.py  trader_profile.py
services/agents/src/agents/orchestrator/: __init__.py  graph.py  nodes.py  state.py
services/agents/src/agents/rag/: __init__.py  chunker.py  embedder.py  ingestor.py  retriever.py
services/agents/src/agents/specialists/: __init__.py  account_kyc.py  base.py  billing.py  compliance.py  onboarding.py  payout.py  rules.py  technical.py
services/agents/src/agents/tools/: __init__.py  account_tools.py  base.py  billing_tools.py  compliance_tools.py  executor.py  onboarding_tools.py  payout_tools.py  registry.py  rules_tools.py  technical_tools.py
services/channels/: Dockerfile  pyproject.toml
services/channels/src/channels/: __init__.py  identity.py  outbound.py
services/channels/src/channels/discord/: adapter.py  bot.py  runner.py
services/channels/src/channels/email/: __init__.py  adapter.py  parser.py  sender.py
services/channels/src/channels/webchat/: __init__.py  adapter.py  routes.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: __init__.py  deps.py  exception_handlers.py  main.py
services/gateway/src/gateway/middleware/: audit.py  ip_filter.py  rate_limit.py  request_id.py  security_headers.py  tenant.py
services/gateway/src/gateway/routes/: admin.py  conversations.py  health.py  knowledge.py  messages.py  traders.py  webhooks.py
services/integrations/: pyproject.toml
services/integrations/src/integrations/: __init__.py
services/integrations/src/integrations/connectors/: __init__.py  base.py  ctrader.py  match_trader.py  mt4.py  mt5.py  trade_locker.py  universal.py  veriff.py
services/integrations/src/integrations/schemas/: __init__.py  kyc.py  trading.py
tests/: __init__.py  conftest.py
tests/agents/: test_specialists.py  test_tools.py
tests/core/: test_auth.py  test_encryption.py  test_errors.py  test_sanitize.py  test_webhooks.py
tests/gateway/: test_deps.py  test_middleware.py
tests/integrations/: test_universal.py
(+4 files in other folders)
