[project]
name = "neuraprop-agents"
version = "0.1.0"
description = "NeuraProp AI Agent Orchestration Service"
requires-python = ">=3.12"
dependencies = [
    "neuraprop-core",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "litellm>=1.55.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.uv.sources]
neuraprop-core = { workspace = true }
