[project]
name = "neuraprop-channels"
version = "0.1.0"
description = "NeuraProp AI Channel Adapter Service"
requires-python = ">=3.12"
dependencies = [
    "neuraprop-core",
    "discord.py>=2.4.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/channels"]

[tool.uv.sources]
neuraprop-core = { workspace = true }
