[project]
name = "neuraprop-gateway"
version = "0.1.0"
description = "NeuraProp AI API Gateway Service"
requires-python = ">=3.12"
dependencies = [
    "neuraprop-core",
    "neuraprop-channels",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mangum>=0.19.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.uv.sources]
neuraprop-core = { workspace = true }
neuraprop-channels = { workspace = true }
