[project]
name = "neuraprop-integrations"
version = "0.1.0"
description = "NeuraProp AI Integration Connector Service"
requires-python = ">=3.12"
dependencies = [
    "neuraprop-core",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integrations"]

[tool.uv.sources]
neuraprop-core = { workspace = true }
